fixed spacing on lesson 2

--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -1,12 +1,12 @@
 @media only screen and (min-width: 45em) {
   body {
-    max-width: 70em;
+    max-width: 64em;
   }
 
   main {
-    max-width: 70em;
+    max-width: 64em;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 80px 40px 40px 620px 325px;
+    grid-template-rows: 80px 40px 40px 650px 370px;
   }
 
   .box3 {
